added files to ./images

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <title>HTML, CSS and SASS Boilerplate</title>
   <meta name="description" content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./favicon_io/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="./favicon_io/android-chrome-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./images/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./images/android-chrome-512x512.png">
   <link rel="manifest" href="/site.webmanifest">
 
 </head>
