--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-  <link rel="icon" sizes="32x32" href="images/apple-touch-icon.png">
-  <link rel="icon" sizes="16x16" href="images/apple-touch-icon.png">
+  <link rel="icon" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./images/android-chrome-192x192.png">
